# enn-enn

./: .gitattributes  .gitignore  LICENSE  README.md  gan.py  mnist_digit2_gan.py  pyproject.toml  streetview_gan.py
examples/data/streetview/: front_streetview.csv
examples/gan/: gan.py  mnist_all_gan.py
nn/: layers.py  metrics.py  models.py  optimizers.py
src/enn_enn/: models.py  optimizers.py  utils.py
